--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditProfileActivity"></activity>
+        <activity android:name=".ViewRequestDetailsActivity"></activity>
+        <activity android:name=".RequestListActivity" />
+        <activity android:name=".EditProfileActivity" />
         <activity android:name=".ViewItemDetailsActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
